src/test/deca/context/valid/provided/test_error_identifier.deca
{
    String a = "Jihad";
    println(a);
}