src/test/deca/context/invalid/provided/ifelse_not_working.deca
{
    int a=4;
    if(a=3){
        println("hello");
    }
}